--- a/vrml/WebView/xj3d.html
+++ b/vrml/WebView/xj3d.html
@@ -5,8 +5,7 @@
   </head>
   <body bgcolor="#000">
     <center>
-      <applet width="80%" height="80%" code="xj3d.browser.Xj3DBrowser">
-
+      <applet width="80%" height="80%">
         <param name="java_version" value="1.5+" />
         <param name="jnlp_href" value="xj3d.jnlp" />
       </applet>
