--- a/vrml/WebView/xj3d.html
+++ b/vrml/WebView/xj3d.html
@@ -4,11 +4,8 @@
     <title>Team FREDNET VRML Web View</title>
   </head>
   <body bgcolor="#000">
-    <center>
-      <applet width="80%" height="80%">
-        <param name="java_version" value="1.5+" />
-        <param name="jnlp_href" value="xj3d.jnlp" />
-      </applet>
-    </center>
+    <embed type="application/x-java-jnlp-file;version=1.5" src="xj3d.jnlp"
+           width="80%" height="80%"
+           pluginspage="http://java.sun.com/products/autodl/j2se" />
   </body>
 </html>
