--- a/vrml/WebView/xj3d.html
+++ b/vrml/WebView/xj3d.html
@@ -5,6 +5,7 @@
   </head>
   <body bgcolor="#000">
     <embed type="application/x-java-applet;version=1.5" src="xj3d.jnlp"
+           name="PicoRover"
            width="80%" height="80%"
            pluginspage="http://java.sun.com/products/autodl/j2se" />
   </body>
