--- a/vrml/PicoRover/About.html
+++ b/vrml/PicoRover/About.html
@@ -3,8 +3,8 @@
     <title>Team FREDNET PicoRover VRML</title>
   </head>
   <body>
-    <p> See <a href="http://wiki.xprize.frednet.org/index.php/User:Jdp/Mockup_Projects#PicoRover.wrl">User:Jdp/Mockup_Projects#PicoRover.wrl</a>. </p>
-    <p> <a href="PicoRover.jnlp">Launch</a>
+
+    <p> <a href="PicoRover.jnlp">Launch</a> (broken?)
     </p>
   </body>
 </html>
