--- a/vrml/PicoRover/PicoRoverApplet.html
+++ b/vrml/PicoRover/PicoRoverApplet.html
@@ -16,7 +16,7 @@
                        http://teamfrednet-mockups.googlecode.com/files/j3d-vrml-1.5.2.jar">
         <param name="java_version" value="1.6" />
         <param name="codebase_lookup" value="false">
-        <param name="subapplet.classname" value="PicoRoverApplet">
+        <param name="subapplet.classname" value="org.teamfrednet.mockups.PicoRoverApplet">
         <param name="subapplet.displayname" value="Team FREDNET PicoRover VRML J3D">
         <param name="jnlpNumExtensions" value="1">
         <param name="jnlpExtension1" value="http://download.java.net/media/java3d/webstart/release/java3d-latest.jnlp">
