--- a/geom/coords/src/org/orekit/data/package.html
+++ b/geom/coords/src/org/orekit/data/package.html
@@ -1,7 +1,9 @@
 <html>
 <body>
-This package provide base classes for exploring the configured data
-directory tree and read external data that can be used by the library.
+
+This package has been rewritten by J. Pritchard for Team FREDNET to
+read library data from the classpath.  This process is documented in
+the class {@link DataDirectoryCrawler}.
 
 <p>
 Typical examples of external data are the Earth Orientation Parameters and
@@ -9,6 +11,7 @@ the leap seconds history.
 </p>
 	
 @author L. Maisonobe
+@author J. Pritchard
 
 </body>
 </html>
