--- a/lro/comms/copy/localhost/index.html
+++ b/lro/comms/copy/localhost/index.html
@@ -4,14 +4,35 @@
     <script src="/jshash-2.1/sha1.js" type="text/javascript"><!-- --></script>
     <script type="text/javascript"><!-- 
       function bpad(){
-        var a = Math.random()*0xffffff;
-        var b = Math.random()*0xffffff;
-        var c = Math.random()*0xffffff;
-        return new Array(a,b,c);
+        var a = Math.random()*0xffffffff;
+        var b = Math.random()*0xffffffff;
+        this.bin = new Array(a,b);
+        this.binlen = 64;
+        this.hex = binb2hex(this.bin);
+        this.update = function(s){
+          var sb = str2binb(s);
+          this.bin = this.bin.concat(sb);
+          this.binlen += (s.length * chrsz);
+          return this.binlen;
+        };
+        this.digest = function(){
+          this.bdig = core_sha1(this.bin,this.binlen);
+          this.dig = binb2hex(this.bdig);
+          return this.dig;
+        };
       }
       function authenticate(){
         var form = document.forms.udb;
-        
+        var usr = form.usr.value;
+        var pas = form.pas.value;
+        if (usr && pas){
+          var pad = new bpad();
+          form.pad.value = pad.hex;
+          pad.update(pas);
+          var md = pad.digest();
+          form.sig.value = md;
+          message(pad.hex+' '+md);
+        }
       }
     //  --></script>
     <script type="text/javascript"><!-- 
@@ -73,6 +94,7 @@
        border: 3px solid #128;
        padding: 3px;
        padding-left: 8px;
+       padding-top: 8px;
       }
       div#msg {
        margin: 60px;
@@ -80,10 +102,12 @@
        margin-bottom: 6px;
        background-color: #fff;
        width: 62em;
+       height: 2em;
        border: 3px solid #128;
        color: #128;
        padding: 3px;
        padding-left: 8px;
+       padding-top: 7px;
       }
       input {
        border: 1px solid #128;
@@ -93,7 +117,7 @@
       }
     // --></style>
   </head>
-  <body onload="init()">
+  <body onload="javascript:init()">
     <div id="msg">
     </div>
     <div id="form">
@@ -106,13 +130,13 @@
               Auth User
             </td>
             <td align="left">
-              <input type="text" name="usr" id="usr" />
+              <input type="text" name="usr" id="usr" onchange="javascript:authenticate()"/>
             </td>
             <td align="right">
               Auth Pass
             </td>
             <td align="left">
-              <input type="password" name="pas" id="pas" onchange="authenticate()"/>
+              <input type="password" name="pas" id="pas" onchange="javascript:authenticate()"/>
               <input type="hidden" name="pad" id="pad" />
               <input type="hidden" name="sig" id="sig" />
             </td>
