--- a/lro/comms/copy/localhost/index.html
+++ b/lro/comms/copy/localhost/index.html
@@ -203,6 +203,7 @@
             </td>
             <td align="left">
               <input type="submit" value="Create"/>
+              <input type="submit" value="Refresh" onclick="javascript:document.location = '/'; return false;"/>
             </td>
             <td>
             </td>
