--- a/lro/comms/copy/localhost/index.html
+++ b/lro/comms/copy/localhost/index.html
@@ -31,18 +31,18 @@
       }
     //  --></script>
     <script type="text/javascript"><!-- 
+
       function version(){
-          var xhr = new XMLHttpRequest();
-          xhr.onreadystatechange = function(){
-              if (4 == this.readyState){
-                  message(this.responseText);
-              }
-          };
-          xhr.open("GET","/version.txt",true);
-          xhr.send(null);
+        var xhr = new XMLHttpRequest();
+        xhr.onreadystatechange = function(){
+          if (4 == this.readyState){
+            message(this.responseText);
+          }
+        };
+        xhr.open("GET","/version.txt",true);
+        xhr.send(null);
       }
       function message(msg, type){
-
         if (msg){
           var mel = document.getElementById('msg');
           if (mel){
@@ -54,14 +54,12 @@
         }
       }
       function messenger(){
-        
         var map = new Object();
 
         window.location.search.replace(new RegExp( "([^?=&]+)(=([^&]*))?", "g" ),
                                         function( $0, $1, $2, $3 ){ map[ $1 ] = $3.replace('+',' ','g'); } );
 
         var msg = map['msg'];
-
         if (msg)
           message(msg, map['type']);
         else
@@ -84,9 +82,11 @@
       table {
        width: 95%;
       }
-      div#form {
+      div {
        margin: 60px;
        margin-top: 6px;
+       margin-bottom: 6px;
+       color: #128;
        background-color: #fff;
        width: 62em;
        border: 3px solid #128;
@@ -94,18 +94,8 @@
        padding-left: 8px;
        padding-top: 8px;
       }
-      div#msg {
-       margin: 60px;
-       margin-top: 6px;
-       margin-bottom: 6px;
-       background-color: #fff;
-       width: 62em;
+      div.msg {
        height: 2em;
-       border: 3px solid #128;
-       color: #128;
-       padding: 3px;
-       padding-left: 8px;
-       padding-top: 7px;
       }
       input {
        border: 1px solid #128;
@@ -129,10 +119,13 @@
        color: #126;
        font-weight: 300;
       }
-    // --></style>
+      a.link {
+       text-decoration: none;
+      }
+    --></style>
   </head>
   <body onload="javascript:init()">
-    <div id="msg">
+    <div class="msg" id="msg">
     </div>
     <div id="form">
       <form method="post" action="/udb" name="udb">
