--- a/lro/comms/copy/localhost/index.html
+++ b/lro/comms/copy/localhost/index.html
@@ -1,214 +1,21 @@
 <html>
   <head>
-    <title>Create user</title>
+    <title>Team FREDNET</title>
+    <link rel="stylesheet" type="text/css" href="/top.css"/>
     <script src="/jshash-2.1/sha1.js" type="text/javascript"><!-- --></script>
-    <script type="text/javascript"><!-- 
-      function bpad(){
-        var a = Math.floor(Math.random()*0xffffffff);
-        var b = Math.floor(Math.random()*0xffffffff);
-        var words = new Array(a,b);
-        this.hex = binb2hex(words);
-        this.update = function(s){
-          this.string = this.hex + s;
-        };
-        this.digest = function(){
-          this.dig = hex_sha1(this.string);
-          return this.dig;
-        };
-      }
-      function authenticate(){
-        var form = document.forms.udb;
-        var usr = form.usr.value;
-        var pas = form.pas.value;
-        if (usr && pas){
-          var pad = new bpad();
-          form.pad.value = pad.hex;
-          pad.update(pas);
-          var md = pad.digest();
-          form.sig.value = md;
-          form.pas.value = 'xxxxxxxxxxxxxxxxxxxxxxxxx';
-          message(pad.hex+' '+md);
-        }
-      }
-    //  --></script>
-    <script type="text/javascript"><!-- 
-
-      function version(){
-        var xhr = new XMLHttpRequest();
-        xhr.onreadystatechange = function(){
-          if (4 == this.readyState){
-            message(this.responseText);
-          }
-        };
-        xhr.open("GET","/version.txt",true);
-        xhr.send(null);
-      }
-      function message(msg, type){
-        if (msg){
-          var mel = document.getElementById('msg');
-          if (mel){
-            if (type)
-              mel.innerHTML = '<span class="'+type+'">'+msg+'</span>';
-            else
-              mel.innerHTML = '<span>'+msg+'</span>';
-          }
-        }
-      }
-      function messenger(){
-        var map = new Object();
-
-        window.location.search.replace(new RegExp( "([^?=&]+)(=([^&]*))?", "g" ),
-                                        function( $0, $1, $2, $3 ){ map[ $1 ] = $3.replace('+',' ','g'); } );
-
-        var msg = map['msg'];
-        if (msg)
-          message(msg, map['type']);
-        else
-          version();
-      }
-      function init(){
-        document.forms.udb.usr.focus();
-        messenger();
-      }
-    //  --></script>
-    <style type="text/css"><!-- 
-      body {
-       background-color: #000;
-       background: url(/images/star_tile.gif);
-      }
-      body, table, tr, td, input {
-       font: 12px Verdana;
-       color: #128;
-      }
-      table {
-       width: 95%;
-      }
-      div {
-       margin: 60px;
-       margin-top: 6px;
-       margin-bottom: 6px;
-       color: #128;
-       background-color: #fff;
-       width: 62em;
-       border: 3px solid #128;
-       padding: 3px;
-       padding-left: 8px;
-       padding-top: 8px;
-      }
-      div.msg {
-       height: 2em;
-      }
-      input {
-       border: 1px solid #128;
-       background-color: #fff;
-       color: #128;
-       padding: 3px;
-      }
-      .success {
-       color: #182;
-       font-weight: 900;
-      }
-      .failure {
-       color: #812;
-       font-weight: 900;
-      }
-      .required {
-       color: #129;
-       font-weight: 700;
-      }
-      .optional {
-       color: #126;
-       font-weight: 300;
-      }
-      a.link {
-       text-decoration: none;
-      }
-    --></style>
+    <script type="text/javascript" src="/top.js"><!--  --></script>
   </head>
-  <body onload="javascript:init()">
-    <div class="msg" id="msg">
+  <body bgcolor="#000" onload="javascript:init()">
+    <div id="nav">
+      <ul class="nav">
+        <li tabindex="1" class="nav"><a href="/">Home</a></li>
+        <li tabindex="2" class="nav"><a href="/Create.html">Create user</a></li>
+      </ul>
     </div>
-    <div id="form">
-      <form method="post" action="/udb" name="udb">
-        <input type="hidden" name="success" value="/index.html" />
-        <input type="hidden" name="failure" value="/index.html" />
-        <table>
-          <tr>
-            <td align="right">
-              <label for="usr" class="required">Auth User</label>
-            </td>
-            <td align="left">
-              <input type="text" name="usr" id="usr"/>
-            </td>
-            <td align="right">
-              <label for="pas" class="required">Auth Pass</label>
-            </td>
-            <td align="left">
-              <input type="password" name="pas" id="pas" onchange="javascript:authenticate()"/>
-              <input type="hidden" name="pad" id="pad" />
-              <input type="hidden" name="sig" id="sig" />
-            </td>
-          </tr>
-          <tr>
-            <td align="right">
-              <label for="username" class="required">Username</label>
-            </td>
-            <td align="left">
-              <input type="text" name="username" id="username" />
-            </td>
-            <td align="right">
-              <label for="password" class="required">Password</label>
-            </td>
-            <td align="left">
-              <input type="password" name="password" id="password" />
-            </td>
-          </tr>
-          <tr>
-            <td align="right">
-              <label for="first" class="optional">First</label>
-            </td>
-            <td align="left">
-              <input type="text" name="first" id="first" />
-            </td>
-            <td align="right">
-              <label for="last" class="optional">Last</label>
-            </td>
-            <td align="left">
-              <input type="text" name="last" id="last" />
-            </td>
-          </tr>
-          <tr>
-            <td align="right">
-              <label for="email" class="optional">Email</label>
-            </td>
-            <td align="left" colspan="3">
-              <input type="text" name="email" id="email" size="60"/>
-            </td>
-          </tr>
-          <tr>
-            <td align="right">
-              <label for="gmloc" class="optional">G Maps URL</label>
-            </td>
-            <td align="left" colspan="3">
-              <input type="text" name="gmloc" id="gmloc" size="60"/>
-            </td>
-          </tr>
-          <tr>
-            <td>
-            </td>
-            <td>
-            </td>
-            <td>
-            </td>
-            <td align="left">
-              <input type="submit" value="Create"/>
-              <input type="submit" value="Refresh" onclick="javascript:document.location = '/'; return false;"/>
-            </td>
-            <td>
-            </td>
-          </tr>
-        </table>
-      </form>
+    <div id="main">
+      <div id="msg">
+      </div>
+      <p> Welcome </p>
     </div>
   </body>
 </html>
