--- a/lro/comms/copy/localhost/Create.html
+++ b/lro/comms/copy/localhost/Create.html
@@ -13,8 +13,8 @@
   <body bgcolor="#000" onload="javascript:init()">
     <div id="nav">
       <ul class="nav">
-        <li tabindex="1" class="nav"><a href="/">Home</a></li>
-        <li tabindex="2" class="nav"><a href="/Create.html">Create user</a></li>
+        <li class="nav"><a tabindex="1" href="/">Home</a></li>
+        <li class="nav"><a tabindex="2" href="/Create.html">Create user</a></li>
       </ul>
     </div>
     <div id="main">
