--- a/lro/comms/copy/localhost/index.html
+++ b/lro/comms/copy/localhost/index.html
@@ -6,16 +6,19 @@
     <script type="text/javascript" src="/top.js"><!--  --></script>
   </head>
   <body bgcolor="#000" onload="javascript:init()">
-    <div id="nav">
-      <ul class="nav">
-        <li class="nav"><a tabindex="1" href="/">Home</a></li>
-        <li class="nav"><a tabindex="2" href="/Create.html">Create user</a></li>
-      </ul>
-    </div>
-    <div id="main">
-      <div id="msg">
+    <div id="body">
+      <div id="nav">
+        <img class="nav" src="/images/tfx-40x40.png" width="40" height="40"/>
+        <ul class="nav">
+          <li class="nav"><a tabindex="1" href="/">Home</a></li>
+          <li class="nav"><a tabindex="2" href="/Create.html">Create user</a></li>
+        </ul>
       </div>
-      <p> Welcome </p>
+      <div id="main">
+        <div id="msg">
+        </div>
+        <p> Welcome </p>
+      </div>
     </div>
   </body>
 </html>
