--- a/lro/comms/copy/localhost/Create.html
+++ b/lro/comms/copy/localhost/Create.html
@@ -95,7 +95,7 @@
               </td>
               <td align="left">
                 <input type="submit" value="Create"/>
-                <input type="submit" value="Refresh" onclick="javascript:document.location = '/'; return false;"/>
+                <input type="submit" value="Refresh" onclick="javascript:document.location = '/Create.html'; return false;"/>
               </td>
               <td>
               </td>
